--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,7 +8,7 @@
         Title="MainWindow" Height="600" Width="800" ResizeMode="NoResize">
     <Grid>
         <TabControl x:Name="TabMenu">
-            <TabItem Visibility="Collapsed">
+            <TabItem Visibility="Collapsed" x:Name="MenuTabItem">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition/>
@@ -20,13 +20,13 @@
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <Button x:Name="CipherButton" Grid.Column="1" Grid.Row="1" Height="50" VerticalAlignment="Top" FontSize="14pt" Click="GeneralButton_Click" Margin="0 30 0 0">Осаждение информации</Button>
-                    <Button x:Name="DecipherButton" Grid.Column="1" Grid.Row="1" Height="50" VerticalAlignment="Bottom" FontSize="14pt" Click="GeneralButton_Click" Margin="0 0 0 30">Извлечение информации</Button>
+                    <Button x:Name="ConcealMsgBtn" Grid.Column="1" Grid.Row="1" Height="50" VerticalAlignment="Top" FontSize="14pt" Click="MenuBtn_Click" Margin="0 30 0 0">Осаждение информации</Button>
+                    <Button x:Name="RevealMsgBtn" Grid.Column="1" Grid.Row="1" Height="50" VerticalAlignment="Bottom" FontSize="14pt" Click="MenuBtn_Click" Margin="0 0 0 30">Извлечение информации</Button>
                 </Grid>
             </TabItem>
-            <TabItem Visibility="Collapsed">
+            <TabItem Visibility="Collapsed" x:Name="ConcealTabItem">
                 <Grid>
-                    <TabControl x:Name="CipherTabs">
+                    <TabControl x:Name="ConcealTabControl">
                         <TabItem Visibility="Collapsed">
                             <Grid Height="auto">
                                 <Grid.RowDefinitions>
@@ -55,20 +55,20 @@
                                         <ColumnDefinition />
                                         <ColumnDefinition />
                                     </Grid.ColumnDefinitions>
-                                    <Button Height="25" Width="150" x:Name="OpenFileButton" Click="OpenFileButton2_Click">Открыть файл</Button>
+                                    <Button Height="25" Width="150" x:Name="OpenMsgBtn" Click="OpenMsgBtn_Click">Открыть файл</Button>
                                     <ScrollViewer Grid.Row="1" Grid.Column="0" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
-                                        <TextBox x:Name="ClearTextBox" Width="auto" TextWrapping="Wrap" LostKeyboardFocus="ClearTextBox_LostKeyboardFocus"></TextBox>
+                                        <TextBox x:Name="MsgTextBox" Width="auto" TextWrapping="Wrap" LostKeyboardFocus="MsgTextBox_LostKeyboardFocus"></TextBox>
                                     </ScrollViewer>
                                     <Label Grid.Column="1" FontSize="14pt" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">Бинарное представление</Label>
                                     <ScrollViewer Grid.Row="1" Grid.Column="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
-                                        <TextBox x:Name="BinaryClearTextBox" Width="auto" TextWrapping="Wrap" IsReadOnly="True"></TextBox>
+                                        <TextBox x:Name="MsgBitsTextBox" Width="auto" TextWrapping="Wrap" IsReadOnly="True"></TextBox>
                                     </ScrollViewer>
                                     <Label Grid.Column="1" Grid.Row="2" Width="150" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">Количество битов:</Label>
                                     <Label Grid.Column="1" Grid.Row="2" Width="50" x:Name="BitsCounterLabel" HorizontalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"></Label>
                                     <Button x:Name="ClearTextNextButton" Click="ClearTextNextButton_Click" IsEnabled="False" Grid.Column="1" Grid.Row="2" Width="150" Height="25" HorizontalAlignment="Right" Margin="0 0 20 0">Далее</Button>
                                     <Grid Grid.Row="4" Grid.ColumnSpan="2">
-                                        <Label x:Name="ErrorHeader" Width="75px" Height="30px" HorizontalAlignment="Left" Foreground="Red" Visibility="Hidden">Ошибка:</Label>
-                                        <Label x:Name="ErrorLabel" Width="250px" Height="30px" Foreground="Red" Visibility="Hidden"></Label>
+                                        <Label x:Name="MsgErrorHeader" Width="75px" Height="30px" HorizontalAlignment="Left" Foreground="Red" Visibility="Hidden">Ошибка:</Label>
+                                        <Label x:Name="MsgErrorLabel" Width="250px" Height="30px" Foreground="Red" Visibility="Hidden"></Label>
                                     </Grid>
                                 </Grid>
                             </Grid>
@@ -100,7 +100,7 @@
                                         <ColumnDefinition />
                                         <ColumnDefinition />
                                     </Grid.ColumnDefinitions>
-                                    <Button Height="25" Width="150" x:Name="OpenFile2Button" Click="OpenFile2Button2_Click">Открыть файл</Button>
+                                    <Button Height="25" Width="150" x:Name="OpenFile2Button" Click="OpenContainerBtn_Click">Открыть файл</Button>
                                     <ScrollViewer Grid.Row="1" Grid.Column="0" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
                                         <TextBox x:Name="ContainerTextBox" Width="auto" TextWrapping="Wrap"></TextBox>
                                     </ScrollViewer>
@@ -116,16 +116,16 @@
                                             <ColumnDefinition Width="1.5*"/>
                                             <ColumnDefinition Width="1*"/>
                                         </Grid.ColumnDefinitions>
-                                        <Button x:Name="WordCountButton" Click="WordCountButton2_Click" Grid.Column="0" Grid.Row="0" Height="25" IsEnabled="False" Margin="10 0 10 0">Подсчитать</Button>
+                                        <Button x:Name="WordCountButton" Click="CountSymbolsBtn_Click" Grid.Column="0" Grid.Row="0" Height="25" IsEnabled="False" Margin="10 0 10 0">Подсчитать</Button>
                                         <Label Grid.Column="1" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center">Количество символов:</Label>
-                                        <Label x:Name="WordCounterLabel" Grid.Column="2" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"></Label>
-                                        <Button x:Name="ContainerCheckButton" IsEnabled="False" Click="ContainerCheckButton2_Click" Grid.Column="0" Grid.Row="1" Height="25" Margin="10 0 10 0">Проверить</Button>
+                                        <Label x:Name="ContainerSymbolsCounterLabel" Grid.Column="2" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"></Label>
+                                        <Button x:Name="ContainerTestBtn" IsEnabled="False" Click="ContainerTestBtn_Click" Grid.Column="0" Grid.Row="1" Height="25" Margin="10 0 10 0">Проверить</Button>
                                         <Label Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">Результат:</Label>
                                         <Label x:Name="ContainerCheckLabel" Grid.Column="2" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"></Label>
-                                        <Button x:Name="ContainerTest" IsEnabled="False" Click="ContainerTest2_Click" Grid.Column="0" Grid.Row="2" Height="25" Margin="10 0 10 0">Тест</Button>
-                                        <Label Grid.Row="2" Grid.Column="1" x:Name="TestLabel" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Red">Статус</Label>
-                                        <Label x:Name="Error2Header" Foreground="Red" Visibility="Hidden" Grid.Row="3" Grid.ColumnSpan="3" VerticalAlignment="Center">Ошибка:</Label>
-                                        <Label x:Name="Error2Label" Foreground="Red" Visibility="Hidden" Grid.Row="3" Grid.ColumnSpan="3" VerticalAlignment="Bottom"></Label>
+                                        <Button x:Name="ContainerTest" IsEnabled="False" Click="ConcealBtn_Click" Grid.Column="0" Grid.Row="2" Height="25" Margin="10 0 10 0">Тест</Button>
+                                        <Label Grid.Row="2" Grid.Column="1" x:Name="ConcealStatusLabel" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Red">Статус</Label>
+                                        <Label x:Name="ContainerErrorHeader" Foreground="Red" Visibility="Hidden" Grid.Row="3" Grid.ColumnSpan="3" VerticalAlignment="Center">Ошибка:</Label>
+                                        <Label x:Name="ContainerErrorLabel" Foreground="Red" Visibility="Hidden" Grid.Row="3" Grid.ColumnSpan="3" VerticalAlignment="Bottom"></Label>
                                     </Grid>
                                     <Button x:Name="ContainerPrevButton" Click="ContainerPrevButton_Click" IsEnabled="True" Grid.Column="0" Grid.Row="2" Width="150" Height="25">Назад</Button>
                                     <Button x:Name="MenuButton1" Grid.Column="1" Grid.Row="2" Height="25" Width="150px" Click="MenuButton_Click">В меню</Button>
@@ -162,10 +162,10 @@
                             <ColumnDefinition />
                             <ColumnDefinition />
                         </Grid.ColumnDefinitions>
-                        <Button Height="25" Width="150" x:Name="OpenFile3Button" Click="OpenFile3Button_Click">Открыть файл</Button>
-                        <Label Height="25" Width="150" Grid.Column="1" HorizontalContentAlignment="Center" Foreground="Red" x:Name="EncodedFileStatus">Файл не выбран</Label>
+                        <Button Height="25" Width="150" x:Name="OpenFile3Button" Click="OpenConcealedFileBtn_Click">Открыть файл</Button>
+                        <Label Height="25" Width="150" Grid.Column="1" HorizontalContentAlignment="Center" Foreground="Red" x:Name="ConcealedFileStatus">Файл не выбран</Label>
                         <ScrollViewer Grid.Row="1" Grid.Column="0" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
-                            <TextBox x:Name="DecodedText" Width="auto" TextWrapping="Wrap"></TextBox>
+                            <TextBox x:Name="RevealedText" Width="auto" TextWrapping="Wrap"></TextBox>
                         </ScrollViewer>
                         <Grid Grid.Column="1" Grid.Row="1">
                             <Grid.RowDefinitions>
@@ -179,9 +179,10 @@
                                 <ColumnDefinition Width="1*"/>
                                 <ColumnDefinition Width="1.5*"/>
                             </Grid.ColumnDefinitions>
-                            <Button x:Name="DecodeButton" Click="DecodeButton2_Click" Grid.Column="0" Grid.Row="0" Margin="10 0 10 0" Height="25" IsEnabled="False">Извлечь сообщение</Button>
+                            <Button x:Name="DecodeButton" Click="RevealMsgBtn_Click" Grid.Column="0" Grid.Row="0" Margin="10 0 10 0" Height="25" IsEnabled="False">Извлечь сообщение</Button>
                             <Label x:Name="DecodeStatusKey" Grid.Column="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">Статус:</Label>
-                            <Label x:Name="DecodeStatusValue" Grid.Column="2" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Center"></Label>
+                            <Label x:Name="RevealStatusValue" Grid.Column="2" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Center"></Label>
+                            <Button x:Name="SaveRevealedMsgBtn" Grid.Row="1" Margin="10 0 10 0" Height="25" IsEnabled="False" Click="SaveRevealedMsgBtn_Click">Сохранить</Button> 
                         </Grid>
                         <Button x:Name="MenuButton2" Grid.Column="2" Grid.Row="4" Height="25" Width="150px" Click="MenuButton_Click">В меню</Button>
                     </Grid>
