--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -116,16 +116,20 @@
                                             <ColumnDefinition Width="1.5*"/>
                                             <ColumnDefinition Width="1*"/>
                                         </Grid.ColumnDefinitions>
-                                        <Button x:Name="WordCountButton" Click="CountSymbolsBtn_Click" Grid.Column="0" Grid.Row="0" Height="25" IsEnabled="False" Margin="10 0 10 0">Подсчитать</Button>
-                                        <Label Grid.Column="1" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center">Количество символов:</Label>
-                                        <Label x:Name="ContainerSymbolsCounterLabel" Grid.Column="2" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center"></Label>
-                                        <Button x:Name="ContainerTestBtn" IsEnabled="False" Click="ContainerTestBtn_Click" Grid.Column="0" Grid.Row="1" Height="25" Margin="10 0 10 0">Проверить</Button>
+                                        
+                                        <Button x:Name="ContainerCheckBtn" IsEnabled="False" Click="ContainerCheckBtn_Click" Grid.Column="0" Grid.Row="1" Height="25" Margin="10 0 10 0">Проверить</Button>
                                         <Label Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">Результат:</Label>
                                         <Label x:Name="ContainerCheckLabel" Grid.Column="2" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"></Label>
-                                        <Button x:Name="ContainerTest" IsEnabled="False" Click="ConcealBtn_Click" Grid.Column="0" Grid.Row="2" Height="25" Margin="10 0 10 0">Тест</Button>
+                                        
+                                        <Button x:Name="ConcealBtn" IsEnabled="False" Click="ConcealBtn_Click" Grid.Column="0" Grid.Row="2" Height="25" Margin="10 0 10 0">Скрыть сообщение</Button>
                                         <Label Grid.Row="2" Grid.Column="1" x:Name="ConcealStatusLabel" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Red">Статус</Label>
                                         <Label x:Name="ContainerErrorHeader" Foreground="Red" Visibility="Hidden" Grid.Row="3" Grid.ColumnSpan="3" VerticalAlignment="Center">Ошибка:</Label>
                                         <Label x:Name="ContainerErrorLabel" Foreground="Red" Visibility="Hidden" Grid.Row="3" Grid.ColumnSpan="3" VerticalAlignment="Bottom"></Label>
+                                        <Label x:Name="BitsPerSymbolSliderLabel" Content="Битов на символ" HorizontalAlignment="Center" VerticalAlignment="Center"></Label>
+                                        <DockPanel VerticalAlignment="Center" Margin="10" Grid.Row="0" Grid.Column="1">
+                                            <Label Content="{Binding ElementName=BitsPerSymbolSlider, Path=Value, UpdateSourceTrigger=PropertyChanged}" DockPanel.Dock="Right" Width="40" />
+                                            <Slider Ticks="2,4,8" Maximum="8" TickPlacement="BottomRight" TickFrequency="2" Minimum="2" IsSnapToTickEnabled="True" Name="BitsPerSymbolSlider" />
+                                        </DockPanel>
                                     </Grid>
                                     <Button x:Name="ContainerPrevButton" Click="ContainerPrevButton_Click" IsEnabled="True" Grid.Column="0" Grid.Row="2" Width="150" Height="25">Назад</Button>
                                     <Button x:Name="MenuButton1" Grid.Column="1" Grid.Row="2" Height="25" Width="150px" Click="MenuButton_Click">В меню</Button>
