--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,202 +1,57 @@
-﻿<Window x:Class="HolyCryptv3.MainWindow"
+﻿<mah:MetroWindow x:Class="HolyCryptv3.MainWindow2"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:local="clr-namespace:HolyCryptv3"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="800" ResizeMode="NoResize">
-    <Grid>
-        <TabControl x:Name="TabMenu">
-            <TabItem Visibility="Collapsed" x:Name="MenuTabItem">
+        Title="{DynamicResource MainTitle}" 
+        Height="600" Width="800" ResizeMode="CanMinimize"
+        WindowStartupLocation="CenterScreen">
+    <mah:MetroWindow.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <!-- MahApps.Metro resource dictionaries. Make sure that all file names are Case Sensitive! -->
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                <!-- Theme setting -->
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Light.Blue.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </mah:MetroWindow.Resources>
+    <!--<mah:MetroWindow.Flyouts>
+        <mah:FlyoutsControl>
+            <mah:Flyout x:Name="FirstFlyout" IsOpen="True" 
+                        Theme="Accent"
+                        Header="Settings" Position="Right" Width="250">
                 <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                        <RowDefinition/>
-                    </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="1.2*"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <Button x:Name="ConcealMsgBtn" Grid.Column="1" Grid.Row="1" Height="50" VerticalAlignment="Top" FontSize="14pt" Click="MenuBtn_Click" Margin="0 30 0 0">Осаждение информации</Button>
-                    <Button x:Name="RevealMsgBtn" Grid.Column="1" Grid.Row="1" Height="50" VerticalAlignment="Bottom" FontSize="14pt" Click="MenuBtn_Click" Margin="0 0 0 30">Извлечение информации</Button>
+                    <StackPanel Grid.Column="0">
+                        <Label x:Name="SettinsLanguage" Content="Язык:" HorizontalAlignment="Center"/>
+                    </StackPanel>
+                    <StackPanel Grid.Column="1">
+                        <ComboBox Margin="5 0 5 0" SelectedIndex="0">
+                            <ComboBoxItem Content="Русский" x:Name="ru_RU"/>
+                            <ComboBoxItem Content="Английский" x:Name="en_US"/>
+                        </ComboBox>
+                    </StackPanel>
                 </Grid>
-            </TabItem>
-            <TabItem Visibility="Collapsed" x:Name="ConcealTabItem">
-                <Grid>
-                    <TabControl x:Name="ConcealTabControl">
-                        <TabItem Visibility="Collapsed">
-                            <Grid Height="auto">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="1*"/>
-                                    <RowDefinition Height="9*"/>
-                                </Grid.RowDefinitions>
-                                <Grid Grid.Row="0">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition/>
-                                        <ColumnDefinition/>
-                                        <ColumnDefinition/>
-                                    </Grid.ColumnDefinitions>
-                                    <Label Grid.Row="0" Grid.Column="1"
-                                       FontSize="14pt"
-                                       HorizontalContentAlignment="Center"
-                                       VerticalContentAlignment="Center">Стегосообщение</Label>
-                                </Grid>
-                                <Grid Grid.Row="1">
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="1*"/>
-                                        <RowDefinition Height="5*"/>
-                                        <RowDefinition Height="0.5*"/>
-                                        <RowDefinition Height="0.5*"/>
-                                    </Grid.RowDefinitions>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition />
-                                        <ColumnDefinition />
-                                    </Grid.ColumnDefinitions>
-                                    <Button Height="25" Width="150" x:Name="OpenMsgBtn" Click="OpenMsgBtn_Click">Открыть файл</Button>
-                                    <ScrollViewer Grid.Row="1" Grid.Column="0" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
-                                        <TextBox x:Name="MsgTextBox" Width="auto" TextWrapping="Wrap" LostKeyboardFocus="MsgTextBox_LostKeyboardFocus"></TextBox>
-                                    </ScrollViewer>
-                                    <Label Grid.Column="1" FontSize="14pt" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">Бинарное представление</Label>
-                                    <ScrollViewer Grid.Row="1" Grid.Column="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
-                                        <TextBox x:Name="MsgBitsTextBox" Width="auto" TextWrapping="Wrap" IsReadOnly="True"></TextBox>
-                                    </ScrollViewer>
-                                    <Label Grid.Column="1" Grid.Row="2" Width="150" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">Количество битов:</Label>
-                                    <Label Grid.Column="1" Grid.Row="2" Width="50" x:Name="BitsCounterLabel" HorizontalAlignment="Center" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"></Label>
-                                    <Button x:Name="ClearTextNextButton" Click="ClearTextNextButton_Click" IsEnabled="False" Grid.Column="1" Grid.Row="2" Width="150" Height="25" HorizontalAlignment="Right" Margin="0 0 20 0">Далее</Button>
-                                    <Grid Grid.Row="4" Grid.ColumnSpan="2">
-                                        <Label x:Name="MsgErrorHeader" Width="75px" Height="30px" HorizontalAlignment="Left" Foreground="Red" Visibility="Hidden">Ошибка:</Label>
-                                        <Label x:Name="MsgErrorLabel" Width="250px" Height="30px" Foreground="Red" Visibility="Hidden"></Label>
-                                    </Grid>
-                                </Grid>
-                            </Grid>
-                        </TabItem>
-                        <TabItem Visibility="Collapsed">
-                            <Grid Height="auto">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="1*"/>
-                                    <RowDefinition Height="9*"/>
-                                </Grid.RowDefinitions>
-                                <Grid Grid.Row="0">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition/>
-                                        <ColumnDefinition/>
-                                        <ColumnDefinition/>
-                                    </Grid.ColumnDefinitions>
-                                    <Label Grid.Row="0" Grid.Column="1"
-                                       FontSize="14pt"
-                                       HorizontalContentAlignment="Center"
-                                       VerticalContentAlignment="Center">Стегоконтейнер</Label>
-                                </Grid>
-                                <Grid Grid.Row="1">
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="1*"/>
-                                        <RowDefinition Height="5*"/>
-                                        <RowDefinition Height="1*"/>
-                                    </Grid.RowDefinitions>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition />
-                                        <ColumnDefinition />
-                                    </Grid.ColumnDefinitions>
-                                    <Button Height="25" Width="150" x:Name="OpenFile2Button" Click="OpenContainerBtn_Click">Открыть файл</Button>
-                                    <ScrollViewer Grid.Row="1" Grid.Column="0" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
-                                        <TextBox x:Name="ContainerTextBox" Width="auto" TextWrapping="Wrap"></TextBox>
-                                    </ScrollViewer>
-                                    <Grid Grid.Column="1" Grid.Row="1">
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition/>
-                                            <RowDefinition/>
-                                            <RowDefinition/>
-                                            <RowDefinition/>
-                                        </Grid.RowDefinitions>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="1.5*"/>
-                                            <ColumnDefinition Width="1.5*"/>
-                                            <ColumnDefinition Width="1*"/>
-                                        </Grid.ColumnDefinitions>
-                                        
-                                        <Button x:Name="ContainerCheckBtn" IsEnabled="False" Click="ContainerCheckBtn_Click" Grid.Column="0" Grid.Row="1" Height="25" Margin="10 0 10 0">Проверить</Button>
-                                        <Label Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center">Результат:</Label>
-                                        <Label x:Name="ContainerCheckLabel" Grid.Column="2" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"></Label>
-                                        
-                                        <Button x:Name="ConcealBtn" IsEnabled="False" Click="ConcealBtn_Click" Grid.Column="0" Grid.Row="2" Height="25" Margin="10 0 10 0">Скрыть сообщение</Button>
-                                        <Label Grid.Row="2" Grid.Column="1" x:Name="ConcealStatusLabel" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Red">Статус</Label>
-                                        <Label x:Name="ContainerErrorHeader" Foreground="Red" Visibility="Hidden" Grid.Row="3" Grid.ColumnSpan="3" VerticalAlignment="Center">Ошибка:</Label>
-                                        <Label x:Name="ContainerErrorLabel" Foreground="Red" Visibility="Hidden" Grid.Row="3" Grid.ColumnSpan="3" VerticalAlignment="Bottom"></Label>
-                                        <Label x:Name="BitsPerSymbolSliderLabel" Content="Битов на символ" HorizontalAlignment="Center" VerticalAlignment="Center"></Label>
-                                        <DockPanel VerticalAlignment="Center" Margin="10" Grid.Row="0" Grid.Column="1">
-                                            <Label Content="{Binding ElementName=BitsPerSymbolSlider, Path=Value, UpdateSourceTrigger=PropertyChanged}" DockPanel.Dock="Right" Width="40"  />
-                                            <Slider Ticks="2,4,8" Maximum="8" TickPlacement="BottomRight" TickFrequency="2" Minimum="2" IsSnapToTickEnabled="True" Name="BitsPerSymbolSlider" ValueChanged="BitsPerSymbolSlider_ValueChanged"/>
-                                        </DockPanel>
-                                    </Grid>
-                                    <Button x:Name="ContainerPrevButton" Click="ContainerPrevButton_Click" IsEnabled="True" Grid.Column="0" Grid.Row="2" Width="150" Height="25">Назад</Button>
-                                    <Button x:Name="MenuButton1" Grid.Column="1" Grid.Row="2" Height="25" Width="150px" Click="MenuButton_Click">В меню</Button>
-                                </Grid>
-                            </Grid>
-                        </TabItem>
-                    </TabControl>
-                </Grid>
-            </TabItem>
-            <TabItem Visibility="Collapsed">
-                <Grid Height="auto">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="1*"/>
-                        <RowDefinition Height="9*"/>
-                    </Grid.RowDefinitions>
-                    <Grid Grid.Row="0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                            <ColumnDefinition/>
-                        </Grid.ColumnDefinitions>
-                        <Label Grid.Row="0" Grid.Column="1"
-                                       FontSize="14pt"
-                                       HorizontalContentAlignment="Center"
-                                       VerticalContentAlignment="Center">Стегоконтейнер</Label>
-                    </Grid>
-                    <Grid Grid.Row="1">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="1*"/>
-                            <RowDefinition Height="5*"/>
-                            <RowDefinition Height="1*"/>
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition />
-                            <ColumnDefinition />
-                        </Grid.ColumnDefinitions>
-                        <Button Height="25" Width="150" x:Name="OpenFile3Button" Click="OpenConcealedFileBtn_Click">Открыть файл</Button>
-                        <Label Height="25" Width="150" Grid.Column="1" HorizontalContentAlignment="Center" Foreground="Red" x:Name="ConcealedFileStatus">Файл не выбран</Label>
-                        <ScrollViewer Grid.Row="1" Grid.Column="0" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Disabled">
-                            <TextBox x:Name="RevealedText" Width="auto" TextWrapping="Wrap"></TextBox>
-                        </ScrollViewer>
-                        <Grid Grid.Column="1" Grid.Row="1">
-                            <Grid.RowDefinitions>
-                                <RowDefinition/>
-                                <RowDefinition/>
-                                <RowDefinition/>
-                                <RowDefinition/>
-                            </Grid.RowDefinitions>
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="1.5*"/>
-                                <ColumnDefinition Width="1*"/>
-                                <ColumnDefinition Width="1.5*"/>
-                            </Grid.ColumnDefinitions>
-                            <Label Content="Битов на символ" HorizontalAlignment="Center" VerticalAlignment="Center"></Label>
-                            <DockPanel VerticalAlignment="Center" Margin="10" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2">
-                                <Label Content="{Binding ElementName=DecodeBitsPerSymbolSlider, Path=Value, UpdateSourceTrigger=PropertyChanged}" DockPanel.Dock="Right" Width="40"  />
-                                <Slider Ticks="2,4,8" Maximum="8" TickPlacement="BottomRight" TickFrequency="2" Minimum="2" IsSnapToTickEnabled="True" Name="DecodeBitsPerSymbolSlider" ValueChanged="BitsPerSymbolSlider_ValueChanged"/>
-                            </DockPanel>
-                            <Button x:Name="DecodeButton" Click="RevealMsgBtn_Click" Grid.Column="0" Grid.Row="1" Margin="10 0 10 0" Height="25" IsEnabled="False">Извлечь сообщение</Button>
-                            <Label x:Name="DecodeStatusKey" Grid.Column="1" Grid.Row="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center">Статус:</Label>
-                            <Label x:Name="RevealStatusValue" Grid.Column="2" Grid.Row="1" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Center"></Label>
-                            <Button x:Name="SaveRevealedMsgBtn" Grid.Row="2" Margin="10 0 10 0" Height="25" IsEnabled="False" Click="SaveRevealedMsgBtn_Click">Сохранить</Button> 
-                        </Grid>
-                        <Button x:Name="MenuButton2" Grid.Column="2" Grid.Row="4" Height="25" Width="150px" Click="MenuButton_Click">В меню</Button>
-                    </Grid>
-                </Grid>
-            </TabItem>
-        </TabControl>
-    </Grid>
-</Window>
+                
+            </mah:Flyout>
+        </mah:FlyoutsControl>
+    </mah:MetroWindow.Flyouts>-->
+    <DockPanel>
+        <Menu DockPanel.Dock="Top" Height="30" VerticalContentAlignment="Center">
+            <MenuItem Header="{DynamicResource MenuHelp}" Height="30" x:Name="MenuItem_Help" Click="MenuItem_Help_Click"></MenuItem>
+            <MenuItem Header="{DynamicResource MenuAbout}" Height="30" x:Name="MenuItem_About" Click="MenuItem_About_Click"></MenuItem>
+            <!--<MenuItem Header="Настройки" Height="30" x:Name="MenuItem_Settings" Click="MenuItem_Settings_Click"></MenuItem>-->
+        </Menu>
+        
+        <Frame x:Name="_MainFrame" NavigationUIVisibility="Hidden"></Frame>
+        
+    </DockPanel>
+</mah:MetroWindow>
