--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="HolyCryptv3.App"
+﻿<Application x:Class="StegoLine.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:HolyCryptv3"
+             xmlns:local="clr-namespace:StegoLine"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
