--- a/Pages/Conceal/ConcealCntPage.xaml
+++ b/Pages/Conceal/ConcealCntPage.xaml
@@ -1,10 +1,10 @@
-﻿<Page x:Class="HolyCryptv3.Pages.Conceal.ConcealCntPage"
+﻿<Page x:Class="StegoLine.Pages.Conceal.ConcealCntPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-      xmlns:local="clr-namespace:HolyCryptv3.Pages.Conceal"
+      xmlns:local="clr-namespace:StegoLine.Pages.Conceal"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
       d:DesignHeight="600" d:DesignWidth="800">
