--- a/Pages/Conceal/ConcealMsgPage.xaml
+++ b/Pages/Conceal/ConcealMsgPage.xaml
@@ -4,9 +4,9 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-      xmlns:local="clr-namespace:HolyCryptv3.Pages.Conceal"
-      xmlns:HolyCryptv3="clr-namespace:HolyCryptv3" 
-      x:Class="HolyCryptv3.Pages.Conceal.ConcealMsgPage"
+      xmlns:local="clr-namespace:StegoLine.Pages.Conceal"
+      xmlns:HolyCryptv3="clr-namespace:StegoLine" 
+      x:Class="StegoLine.Pages.Conceal.ConcealMsgPage"
       xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
       mc:Ignorable="d" 
       d:DesignHeight="600" d:DesignWidth="800">
