--- a/Pages/Reveal/RevealPage.xaml
+++ b/Pages/Reveal/RevealPage.xaml
@@ -1,10 +1,10 @@
-﻿<Page x:Class="HolyCryptv3.Pages.Reveal.RevealPage"
+﻿<Page x:Class="StegoLine.Pages.Reveal.RevealPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-      xmlns:local="clr-namespace:HolyCryptv3.Pages.Reveal"
+      xmlns:local="clr-namespace:StegoLine.Pages.Reveal"
       mc:Ignorable="d" 
       d:DesignHeight="600" d:DesignWidth="800"
       Title="{DynamicResource RevealPageTitle}">
