--- a/Windows/About.xaml
+++ b/Windows/About.xaml
@@ -1,10 +1,10 @@
-﻿<mah:MetroWindow x:Class="HolyCryptv3.Windows.About"
+﻿<mah:MetroWindow x:Class="StegoLine.Windows.About"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        xmlns:local="clr-namespace:HolyCryptv3.Windows"
+        xmlns:local="clr-namespace:StegoLine.Windows"
         mc:Ignorable="d"
         Title="{DynamicResource AboutHeader}" 
         Height="200" Width="400" 
